# extism-wasm-in-wasm

./: Cargo.toml  Readme.md
crates/application/: Cargo.toml
crates/application/.cargo/: config.toml
crates/application/src/: main.rs
crates/pdk1/: Cargo.toml
crates/pdk1/src/: lib.rs
crates/pdk2/: Cargo.toml
crates/pdk2/src/: lib.rs
