[package]
name = "pdk1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
types = { path = "../types" }
serde = { version = "1", features = ["derive"] }
extism-pdk = "0.3.3"
